--- a/src/components/ChatLines.css
+++ b/src/components/ChatLines.css
@@ -15,6 +15,6 @@
 .ChatLine {
     width: 100%;
     text-align: left;
-    font-size: 2rem;
-    padding: 1rem;
+    font-size: 1.2rem;
+    padding: .2rem;
 }
