--- a/src/components/ChatLine.css
+++ b/src/components/ChatLine.css
@@ -3,12 +3,26 @@
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
+    border-bottom: dotted 1px #ccc;
 }
 
 .ChatLineUser {
     position: relative;
+    width: 8rem;
+    text-align: right;
+    padding-right: 2rem;
+    color: #666;
+}
+
+.ChatLineData {
+    position: relative;
+    width: calc(100% - 12rem);
+}
+
+.ChatLineTime {
+    position: relative;
     width: 6rem;
     text-align: right;
-    padding-right: 1rem;
+    padding: .2rem .5rem;
     color: #666;
 }
