--- a/src/components/ChatLine.css
+++ b/src/components/ChatLine.css
@@ -6,9 +6,13 @@
     border-bottom: dotted 1px #ccc;
 }
 
+.ChatLine.server {
+    background-color: #fafafa;
+}
+
 .ChatLineUser {
     position: relative;
-    width: 8rem;
+    width: 12rem;
     text-align: right;
     padding-right: 2rem;
     color: #666;
