--- a/src/components/InputBar.css
+++ b/src/components/InputBar.css
@@ -5,12 +5,28 @@
     height: var(--input-bar-height);
     bottom: 0;
     border-top: var(--border-style);
+    display: grid;
+    grid-template-columns: 2rem auto;
+    grid-auto-rows: 100%;
+}
+
+.InputBar .icon {
+    position: relative;
+    color: #ccc;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    transform: translateY(-.1rem) translateX(.3rem);
 }
 
 .InputBar input {
+    position: relative;
     border: 0;
     width: 100%;
     height: 100%;
     font-size: 1.4rem;
     padding: 1rem;
+    outline: none;
 }
